#162 : Convert ConfigurableComponentFactory to Spring component
* A big change, but needed to be done. Less Powermock always a good thing!